--- a/FlashCards/Views/Home/Index.cshtml
+++ b/FlashCards/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Durandal Starter Kit</title>
+        <title>Flash Cards</title>
         
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
