Narrowing the app to 720px

--- a/FlashCards/App/views/shell.html
+++ b/FlashCards/App/views/shell.html
@@ -1,5 +1,5 @@
 ﻿<div>
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar">
         <div class="navbar-inner">
             <a class="brand" data-bind="attr: { href: router.visibleRoutes()[0].hash }">
                 <i class="icon-book"></i>
