--- a/FlashCards/Content/flashCards.css
+++ b/FlashCards/Content/flashCards.css
@@ -36,33 +36,123 @@
     margin-top: 12px;
 }
 
-.cardcontainer {
-    max-width: 840px;
-}
-
 .deckName {
-    padding-left: 40px;
+    padding-left: 10px;
     font-size: 18px;
     font-weight: bold;
     color: #666;
+
+    
+
+}
+
+.card_content{        
+    margin-top: 50px;
+    padding-top: 12px;
+    clear: left;
+    clear: right;
+    min-height: 320px;
 }
 
 .card {
-    position: absolute;
-    width: 92%;
-    margin: 64px 0 10px 12px;
-    min-height: 320px;
-    max-width: 940px;
+    color: #fff;
+    font-size: 18px;
+    text-shadow: none;
+    position: relative;        
+    margin-top: 12px;     
 }
-.cardbody {
-    min-height: 230px;
-    margin-bottom: 7px;
-    padding: 10px 16px;
+
+.card .face {
+    position:absolute; 
+
+    font-family: verdana, arial, sans-serif; 
+    border: 1px solid #c4c5c6;        
+    text-align: center;    
+
+    left:0; 
+    top:0;
+    width: 100%;
+    height: 220px; 
+    padding:20px;     
+
+    -ms-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+
+    -webkit-transition: 1.5s ease-in-out;
+    -moz-transition: 1.5s ease-in-out;
+    -ms-transition: 1.5s ease-in-out;
+    -o-transition: 1.5s ease-in-out;
+    transition: 1.5s ease-in-out;
 }
+.card .back {
+    
+    background:#999;
+    
+    -moz-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;    
+    backface-visibility: hidden;
+
+    -moz-transform: perspective(800px) rotateY(-180deg);
+    -webkit-transform: perspective(800px) rotateY(-180deg);    
+    transform: perspective(800px) rotateY(-180deg);
+    
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    
+}
+
+.card .front {
+
+    background:#666;
+
+    -moz-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+
+    -moz-transform: perspective(800px) rotateY(0deg);
+    -webkit-transform: perspective(800px) rotateY(0deg);
+    transform: perspective(800px) rotateY(0deg);
+
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+}
+.card .front img {border:1px solid #fff;}
+
+.card.flip .back {
+    -moz-transform: perspective(800px) rotateY(0);
+    -webkit-transform: perspective(800px) rotateY(0);
+    transform: perspective(800px) rotateY(0);
+}
+.card.flip .front {
+    -webkit-transform: perspective(800px) rotateY(180deg);
+    -moz-transform: perspective(800px) rotateY(180deg);
+    transform: perspective(800px) rotateY(180deg);
+}
+
+.footer {
+    margin-top: 245px;
+}
+
 
 @media (max-width: 480px) {
     .deck {
         width: 80%;
         margin-left: 0;
     }
+
+    .deckName {
+        display: inline-block;
+        overflow: hidden;
+        width: 180px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
 }
+
+
+    
