--- a/FlashCards/Content/flashCards.css
+++ b/FlashCards/Content/flashCards.css
@@ -65,30 +65,42 @@
 .card .face {
     position:absolute; 
 
+    background:#999;
+
     font-family: verdana, arial, sans-serif; 
     border: 1px solid #c4c5c6;        
-    text-align: center;    
 
     left:0; 
     top:0;
     width: 100%;
     height: 220px; 
-    padding:20px;     
+    padding:12px;     
 
     -ms-border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     border-radius: 5px;
 
-    -webkit-transition: 1.5s ease-in-out;
-    -moz-transition: 1.5s ease-in-out;
-    -ms-transition: 1.5s ease-in-out;
-    -o-transition: 1.5s ease-in-out;
-    transition: 1.5s ease-in-out;
+    -webkit-transition: .8s ease-in-out;
+    -moz-transition: .8s ease-in-out;
+    -ms-transition: .8s ease-in-out;
+    -o-transition: .8s ease-in-out;
+    transition: .8s ease-in-out;
 }
+
+.card .face h1 {
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+}
+
+.card .face p {
+    font-size: 12px;
+    font-weight: normal;
+}
+
 .card .back {
     
-    background:#999;
     
     -moz-backface-visibility: hidden;
     -webkit-backface-visibility: hidden;    
@@ -105,8 +117,6 @@
 }
 
 .card .front {
-
-    background:#666;
 
     -moz-backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
