Composing the card itself

--- a/FlashCards/App/views/cards.html
+++ b/FlashCards/App/views/cards.html
@@ -2,22 +2,8 @@
         
     <!--ko compose: "viewmodels/_cardsControls"--><!--/ko-->
      
-    <div class="card_content" >        
-        <span data-bind="text: cardCount"/>
-        <span class="deckName" data-bind="text: deckName"></span>
-        <div class="card" data-bind="click: flip">
-            <div class="front face">
-                <h1 data-bind="text: card().frontHeading"></h1>
-                <p data-bind="text: card().front"></p>
-            </div>
-            <div class="back face">
-                <h1 data-bind="text: card().backHeading">Capital</h1>
-                <p data-bind="text: card().back"></p>
-            </div>
-        </div>        
-    </div>    
-    <!--ko compose: "viewmodels/_cardsFooter"--><!--/ko-->
-        
+    <!--ko compose: "viewmodels/_cardsBody"--><!--/ko-->
     
+    <!--ko compose: "viewmodels/_cardsFooter"--><!--/ko-->
     
 </section>
