--- a/FlashCards/Content/flashCards.css
+++ b/FlashCards/Content/flashCards.css
@@ -106,9 +106,9 @@
     -webkit-backface-visibility: hidden;    
     backface-visibility: hidden;
 
-    -moz-transform: rotateY(-180deg);
-    -webkit-transform: rotateY(-180deg);    
-    transform: rotateY(-180deg);
+    -moz-transform: perspective(1000px) rotateY(-180deg);
+    -webkit-transform: perspective(1000px) rotateY(-180deg);    
+    transform: perspective(1000px) rotateY(-180deg);
     
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -122,9 +122,9 @@
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 
-    -moz-transform: rotateY(0deg);
-    -webkit-transform: rotateY(0deg);
-    transform: rotateY(0deg);
+    -moz-transform: perspective(1000px) rotateY(0deg);
+    -webkit-transform: perspective(1000px) rotateY(0deg);
+    transform: perspective(1000px) rotateY(0deg);
 
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -134,14 +134,14 @@
 .card .front img {border:1px solid #fff;}
 
 .card.flip .back {
-    -moz-transform: rotateY(0);
-    -webkit-transform: rotateY(0);
-    transform: rotateY(0);
+    -moz-transform: perspective(1000px) rotateY(0);
+    -webkit-transform: perspective(1000px) rotateY(0);
+    transform: perspective(1000px) rotateY(0);
 }
 .card.flip .front {
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    transform: rotateY(180deg);
+    -webkit-transform: perspective(1000px) rotateY(180deg);
+    -moz-transform: perspective(1000px) rotateY(180deg);
+    transform: perspective(1000px) rotateY(180deg);
 }
 
 .footer {
