--- a/FlashCards/Views/Home/Index.cshtml
+++ b/FlashCards/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
         @Scripts.Render("~/scripts/vendor")
         
         @if(HttpContext.Current.IsDebuggingEnabled) {
-            <script type="text/javascript" src="~/App/durandal/amd/require.js" data-main="@Url.Content("~/App/main")"></script>
+            <script type="text/javascript" src="~/scripts/require.js" data-main="@Url.Content("~/App/main")"></script>
         } else {
             <script type="text/javascript" src="~/App/main-built.js"></script>
         }
