--- a/FlashCards/Views/Home/_splash.cshtml
+++ b/FlashCards/Views/Home/_splash.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="splash">
     <div class="message">
-        Durandal Starter Kit
+        Flash Cards
     </div>
     <i class="fa fa-spinner fa-spin fa-5x active"></i>
 </div>
