Cleaning up the catalog html

--- a/FlashCards/App/views/catalog.html
+++ b/FlashCards/App/views/catalog.html
@@ -1,5 +1,9 @@
-﻿<section class="catalog">
-    <ul data-bind="foreach: catalogNames">
-        <li class="col-xs-1 col-md-3" data-bind="text: $data"/>        
+﻿<section>
+   <ul class="list-inline" data-bind="foreach: catalogNames">
+      <li class="col-xs-12 col-sm-6 col-md-3">
+         <div class="well">
+            <p class="lead" data-bind="text: $data"></p>
+         </div>
+      </li>        
     </ul>        
 </section>
