Building the cards

--- a/FlashCards/App/views/shell.html
+++ b/FlashCards/App/views/shell.html
@@ -25,5 +25,5 @@
         </div>
     </div>
 
-    <div data-bind="router: { transition: 'entrance', cacheViews: true }"></div>
+    <div data-bind="router: { cacheViews: false }"></div>
 </div>
