--- a/FlashCards/App/views/catalog.html
+++ b/FlashCards/App/views/catalog.html
@@ -1,6 +1,6 @@
 ﻿<section>
    <ul class="list-inline" data-bind="foreach: catalogNames">
-      <li class="col-xs-12 col-sm-6 col-md-3">
+      <li class="col-xs-12 col-sm-6 col-md-3" data-bind="click: $parent.goToCards">
          <div class="well">
             <p class="lead" data-bind="text: $data"></p>
          </div>
