--- a/FlashCards/Content/flashcards.css
+++ b/FlashCards/Content/flashcards.css
@@ -1,12 +1,21 @@
-﻿.card {    
+﻿div.status {
+   margin-top: 8px;
+   color: #666; 
+}
+
+.status .selectedName {
+   margin-left: 10px;
+   font-size: 18px;
+   font-weight: bold;
+}
+
+.card {    
     position: relative;        
+    margin-top: 8px;     
 }
 
 .card .face {
     position:absolute; 
-    width: 100%;
-    height: 220px; 
-    padding:12px;     
     
     -webkit-transition: .8s ease-in-out;
     -moz-transition: .8s ease-in-out;
@@ -20,13 +29,9 @@
     -webkit-backface-visibility: hidden;    
     backface-visibility: hidden;
 
-    -moz-transform: perspective(1000px) rotateY(-180deg);
-    -webkit-transform: perspective(1000px) rotateY(-180deg);    
-    transform: perspective(1000px) rotateY(-180deg);
-    
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+    -moz-transform: perspective(1500px) rotateY(-180deg);
+    -webkit-transform: perspective(1500px) rotateY(-180deg);    
+    transform: perspective(1500px) rotateY(-180deg);        
 }
 
 .card .front {
@@ -34,22 +39,18 @@
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 
-    -moz-transform: perspective(1000px) rotateY(0deg);
-    -webkit-transform: perspective(1000px) rotateY(0deg);
-    transform: perspective(1000px) rotateY(0deg);
-
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+    -moz-transform: perspective(1500px) rotateY(0deg);
+    -webkit-transform: perspective(1500px) rotateY(0deg);
+    transform: perspective(1500px) rotateY(0deg);    
 }
 
 .card.flip .back {
-    -moz-transform: perspective(1000px) rotateY(0);
-    -webkit-transform: perspective(1000px) rotateY(0);
-    transform: perspective(1000px) rotateY(0);
+    -moz-transform: perspective(1500px) rotateY(0);
+    -webkit-transform: perspective(1500px) rotateY(0);
+    transform: perspective(1500px) rotateY(0);
 }
 .card.flip .front {
-    -webkit-transform: perspective(1000px) rotateY(180deg);
-    -moz-transform: perspective(1000px) rotateY(180deg);
-    transform: perspective(1000px) rotateY(180deg);
+    -webkit-transform: perspective(1500px) rotateY(180deg);
+    -moz-transform: perspective(1500px) rotateY(180deg);
+    transform: perspective(1500px) rotateY(180deg);
 }
