--- a/FlashCards/Views/Home/Index.cshtml
+++ b/FlashCards/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
         </script>
     </head>
     <body>
-        <div id="applicationHost" class="container">
+        <div id="applicationHost">
             @Html.Partial("_splash")
         </div>
         
