--- a/FlashCards/Views/Home/Index.cshtml
+++ b/FlashCards/Views/Home/Index.cshtml
@@ -10,19 +10,14 @@
    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
    <meta name="format-detection" content="telephone=no" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-   
    <meta name="apple-mobile-web-app-title" content="Flash Cards">
    
-   <!-- iOS 6 & 7 iPhone 5 -->
-   <link href="~/Content/images/StartUp640x1026.png"
-         media="(device-width: 320px) and (device-height: 568px)
-            and (-webkit-device-pixel-ratio: 2)"
-         rel="apple-touch-startup-image">     
-
    <link rel="apple-touch-icon" href="~/Content/images/AppIcon60x60.png" />
    <link rel="apple-touch-icon" sizes="76x76" href="~/Content/images/AppIcon76x76.png" />
    <link rel="apple-touch-icon" sizes="120x120" href="~/Content/images/AppIcon120x120.png" />
    <link rel="apple-touch-icon" sizes="152x152" href="~/Content/images/AppIcon152x152.png" />
+   
+   <link rel="shortcut icon" href="~/Content/images/AppIcon32x32.png" >
 
    @Styles.Render("~/Content/css")
 
