Simplifying to two pages

--- a/FlashCards/App/views/cards.html
+++ b/FlashCards/App/views/cards.html
@@ -13,7 +13,18 @@
          <span class="selectedName" data-bind="text: selected.name"></span>
       </div>
 
-      <div class="row" data-bind="router: { transition:'entrance'}"></div>
+       <div class ="row">
+           <div class="card" data-bind="click: flip">
+               <div class="col-xs-12 well front face ">
+                   <h4 data-bind="text: selected.card.frontHeading"></h4>
+                   <p data-bind="text: selected.card.front"></p>
+               </div>
+               <div class="col-xs-12 well back face">
+                   <h4 data-bind="text: selected.card.backHeading"></h4>
+                   <p data-bind="text: selected.card.back"></p>
+               </div>
+           </div>
+       </div> 
       
    </div>
 
