--- a/FlashCards/Views/Durandal/Index.cshtml
+++ b/FlashCards/Views/Durandal/Index.cshtml
@@ -39,7 +39,7 @@
    
    @if (HttpContext.Current.IsDebuggingEnabled)
    {
-      <script type="text/javascript" src="~/Scripts/require.js" data-main="/App/main"></script>
+      <script type="text/javascript" src="~/Scripts/require.js" data-main="/App-Durandal/main"></script>
    }
    else
    {
