--- a/FlashCards/Views/Home/Index.cshtml
+++ b/FlashCards/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
             </div>
         </div>
 
-        <div id="applicationHost" class="row" ng-view>
+        <div class="container app-container" ng-view>
         </div>
 
         @Scripts.Render("~/Scripts/angular")
