--- a/FlashCards/Views/Home/Index.cshtml
+++ b/FlashCards/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
             <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="/">
+                        <a class="navbar-brand" href="#/">
                             <i class="fa fa-book"></i><span>Flash Cards</span>
                         </a>
                     </div>
